Finishing up for the day. need to add comment

--- a/instagram/src/components/PostContainer/PostComments/PostComments.module.scss
+++ b/instagram/src/components/PostContainer/PostComments/PostComments.module.scss
@@ -9,5 +9,23 @@
 
 	input {
 		width: 100%;
+		font-size: 1.6rem;
 	}
+}
+
+.text {
+	//border: 1px solid red;
+	margin: 1% 0 1%;
+	padding: 1%;
+}
+
+
+.CommentIcons {
+	//border: 1px solid red;
+	font-size: 1.6rem;
+	width: 25%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+
 }
