--- a/instagram/src/components/PostContainer/PostUserBanner/PostUserBanner.module.scss
+++ b/instagram/src/components/PostContainer/PostUserBanner/PostUserBanner.module.scss
@@ -3,8 +3,10 @@
   justify-content: flex-start;
   align-items: center;
 	width: 90%;
-	margin: 0 auto;
-	border: 1px solid blue;
+	margin: 2% auto;
+	//border: 1px solid blue;
+	padding: 1%;
+	box-sizing: border-box;
 
 	p {
 		margin: 1%;
@@ -14,6 +16,8 @@
 
 .userImg {
 	border-radius: 50%;
+	height: 10%;
+	width: 10%;
 }
 
 .usrName {
