--- a/instagram/src/components/SearchBar/SearchBar.module.scss
+++ b/instagram/src/components/SearchBar/SearchBar.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-	border: 1px solid lime;
+	//border: 1px solid lime;
 	width: 90%;
 	margin: 0 auto;
 }
